--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -1,6 +1,17 @@
-
+.category-container{
+    max-width: 1100px;
+    margin: auto;    
+    
+    .category-name{
+        font-size: 30px;
+        font-weight: 400;
+    } 
     .category-preview{
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         column-gap: 20px;
+
     }
+ 
+}
+
