--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -2,8 +2,21 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 350px;
     position: relative;
+    align-items: center;
 
+
+    button{
+        width: 90%;
+        position: absolute;
+        top: 220px;
+        right: 4px;
+        display: none;
+        align-items: center;
+
+
+    }
 
     img{
         width: 100%;
@@ -15,19 +28,27 @@
         img {
           opacity: 0.8;
         }
+        
+        button {
+            opacity: 0.85;
+            display: flex;
+            justify-content: center;
+        }
 
     }
 
     .footer{
         display: flex;
         flex-direction: row;
-        width: 100%;
+        width: 90%;
         justify-content: space-between;
         padding:0;
         align-items: flex-start;
         margin-top: 0;
         .name, .price{
             margin-top: 0;
+            font-weight: normal;
+            font-size: 20px;
          }
     }
 
